Day 3: Add final iris_classifier notebook

--- a/iris_classifier.ipynb
+++ b/iris_classifier.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6862467c-11b2-47d3-b816-c51472081e71",
+   "execution_count": 1,
+   "id": "93d7619b-08d4-4316-890a-13681ae3d97a",
    "metadata": {},
    "outputs": [
     {
@@ -95,70 +95,50 @@
        "4       0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "from sklearn.datasets import load_iris\n",
     "\n",
     "# Load the Iris dataset from scikit-learn\n",
     "data = load_iris()\n",
     "\n",
-    "#  Convert it into a DataFrame for easier handling \n",
+    "# Convert it into a DataFrame for easier handling\n",
     "df = pd.DataFrame(data.data, columns=data.feature_names)\n",
-    "df[\"target\"] = data.target\n",
+    "df['target'] = data.target  # Add the species as target column\n",
     "\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a6511492-a452-4af0-9717-e87ff80b3724",
+   "execution_count": 2,
+   "id": "6692fe2b-ef95-4290-83ac-7532eee9638d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "#  Features = all columns excep\n",
-    "x = df.drop(\"target\", axis=1)\n",
+    "# Features = all columns except target\n",
+    "X = df.drop(\"target\", axis=1)\n",
     "\n",
-    "#  Lables = target column\n",
+    "# Labels = target column\n",
     "y = df[\"target\"]\n",
     "\n",
-    "#  Split data:80% for training, 20% for testing\n",
-    "x_train, x_test, y_train, y_test = train_test_split(\n",
-    "    x, y, test_size=0.2, random_state=42\n",
-    ")"
+    "# Split data: 80% for training, 20% for testing\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6a78c96c-8aab-4b18-b01e-9ad2d6ea00a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)',\n",
-      "       'petal width (cm)', 'target'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d1fc67a1-4108-4100-b7e7-420c5ddc22d6",
+   "execution_count": 3,
+   "id": "2b388e47-a793-47ab-97ec-4cd92e5bd8bc",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +565,7 @@
        "LogisticRegression(max_iter=200)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,13 +577,13 @@
     "model = LogisticRegression(max_iter=200)\n",
     "\n",
     "# Train the model using training data\n",
-    "model.fit(x_train, y_train)\n"
+    "model.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3206bd9f-eac7-4bd4-a2cc-35d509889b18",
+   "execution_count": 4,
+   "id": "60b0f43f-392e-4356-b57e-5e9bf4567821",
    "metadata": {},
    "outputs": [
     {
@@ -617,19 +597,19 @@
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "#  Make prediction on test data\n",
-    "y_pred = model.predict(x_test)\n",
+    "# Make predictions on test data\n",
+    "y_pred = model.predict(X_test)\n",
     "\n",
-    "#  Check how accurate the model is\n",
+    "# Check how accurate the model is\n",
     "acc = accuracy_score(y_test, y_pred)\n",
     "\n",
-    "print(\"Model Accuracy:\", acc)"
+    "print(\"Model Accuracy:\", acc)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4e276caa-7ae8-43db-bdf5-b441488f31c9",
+   "execution_count": 5,
+   "id": "12de9a6e-f8f7-4167-8ecb-79315ad5c958",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a13b406e-9f70-4be0-a0e3-ed43c9029d62",
+   "id": "4b8e3126-9719-4a03-b67e-686b0550009a",
    "metadata": {},
    "outputs": [],
    "source": []
